--- a/package.json
+++ b/package.json
@@ -12,25 +12,26 @@
     "test": "jest",
     "test:coverage": "jest --coverage",
     "test:ci": "jest --ci --collectCoverage=true --coverageReporters=lcov --forceExit --detectOpenHandles --maxWorkers=2",
-    "ionic-build": "ng build --eval--source-map --configuration=$npm_config_angular_configuration && cordova build android",
-    "ionic-build:debug": "ng build --eval--source-map --configuration=$npm_config_angular_configuration && cordova build android --debug --buildConfig ./buildConfig/build.json",
+    "ionic-build": "ng build --source-map --plugin ~build-customization-plugin.js && cordova build android",
+    "ionic-build:debug": "ng build --plugin ~build-customization-plugin.js && cordova build android --debug --buildConfig ./buildConfig/build.json",
     "ionic-build:prod": "ionic cordova build android --configuration=$npm_config_angular_configuration --prod --release --buildConfig ./buildConfig/build.json",
     "ionic-serve": "ionic cordova run android --livereload --configuration=hmr",
     "sonar-scanner": "sonar-scanner",
     "sonar-scanner:scan": "sonar-scanner -Dsonar.host.url=http://127.0.0.1:9000 -Dsonar.login=$SONAR_LOGIN",
-    "ionic-build-ios:debug": "ng build --eval--source-map --configuration=$npm_config_angular_configuration && cordova run ios --debug"
+    "ionic-build-ios:debug": "ng build --plugin ~build-customization-plugin.js && cordova run ios --debug"
   },
   "private": true,
   "dependencies": {
-    "@angular-builders/custom-webpack": "^8.4.1",
+    "@angular-builders/custom-webpack": "^10.0.1",
     "@angular-builders/dev-server": "^7.3.1",
-    "@angular/animations": "^9.1.13",
-    "@angular/common": "^9.1.13",
-    "@angular/core": "^9.1.13",
-    "@angular/forms": "^9.1.13",
-    "@angular/platform-browser": "^9.1.13",
-    "@angular/platform-browser-dynamic": "^9.1.13",
-    "@angular/router": "^9.1.13",
+    "@angular-devkit/schematics": "^10.2.4",
+    "@angular/animations": "^10.2.5",
+    "@angular/common": "^10.2.5",
+    "@angular/core": "^10.2.5",
+    "@angular/forms": "^10.2.5",
+    "@angular/platform-browser": "^10.2.5",
+    "@angular/platform-browser-dynamic": "^10.2.5",
+    "@angular/router": "^10.2.5",
     "@ionic-native/android-permissions": "^5.30.0",
     "@ionic-native/app-version": "^5.15.1",
     "@ionic-native/camera": "^5.36.0",
@@ -136,6 +137,7 @@
     "ng2-charts": "^2.4.2",
     "ng2-material-dropdown": "0.11.0",
     "ngx-bootstrap": "^5.6.2",
+    "ngx-build-plus": "^10.1.1",
     "ngx-chips": "2.2.2",
     "ngx-infinite-scroll": "^10.0.1",
     "ngx-moment": "^5.0.0",
@@ -145,7 +147,7 @@
     "rxjs": "^6.6.3",
     "sb-svg2pdf": "0.0.10",
     "sb-tag-manager": "^3.9.19",
-    "tslib": "^1.10.0",
+    "tslib": "^2.4.1",
     "uk.co.workingedge.phonegap.plugin.istablet": "^1.2.0",
     "uuid": "^3.4.0",
     "video.js": "7.18.1",
@@ -165,11 +167,11 @@
   },
   "devDependencies": {
     "@angular-devkit/architect": "^0.901.15",
-    "@angular-devkit/build-angular": "~0.901.15",
-    "@angular/cli": "~9.1.15",
-    "@angular/compiler": "~9.1.13",
-    "@angular/compiler-cli": "~9.1.13",
-    "@angular/language-service": "~9.1.13",
+    "@angular-devkit/build-angular": "^0.1002.4",
+    "@angular/cli": "^10.2.4",
+    "@angular/compiler": "^10.2.5",
+    "@angular/compiler-cli": "^10.2.5",
+    "@angular/language-service": "^10.2.5",
     "@angularclass/hmr": "^2.1.3",
     "@babel/core": "^7.5.5",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
@@ -178,12 +180,12 @@
     "@babel/plugin-transform-runtime": "^7.5.5",
     "@babel/preset-env": "^7.9.5",
     "@babel/preset-typescript": "^7.9.0",
-    "@ionic/angular-toolkit": "^2.3.1",
+    "@ionic/angular-toolkit": "^3.1.1",
     "@ionic/v4-migration-tslint": "^1.7.1",
     "@project-sunbird/sb-themes": "0.0.82",
     "@project-sunbird/telemetry-sdk": "0.0.29",
     "@types/jest": "^25.2.1",
-    "@types/node": "12.11.5",
+    "@types/node": "^14.18.36",
     "babel-jest": "^25.4.0",
     "babel-polyfill": "^6.26.0",
     "code-push": "^3.0.1",
@@ -213,7 +215,7 @@
     "tiny-glob": "^0.2.9",
     "ts-node": "^8.4.1",
     "tslint": "~5.16.0",
-    "typescript": "~3.8.3"
+    "typescript": "3.8.3"
   },
   "description": "An Ionic project",
   "cordova": {
@@ -271,9 +273,7 @@
       "cordova-plugin-androidx-adapter": {},
       "cordova-plugin-secure-storage-echo": {},
       "cordova-plugin-appavailability": {},
-      "cordova-plugin-camera": {
-        "ANDROIDX_CORE_VERSION": "1.6.+"
-      },
+      "cordova-plugin-camera": {},
       "cordova-plugin-filepath": {},
       "cordova-plugin-chooser": {},
       "cordova-plugin-filepicker": {},
