--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "test": "jest",
     "test:coverage": "jest --coverage",
     "test:ci": "jest --ci --collectCoverage=true --coverageReporters=lcov --forceExit --detectOpenHandles --maxWorkers=2",
-    "ionic-build": "ng build --eval--source-map --configuration=$npm_config_angular_configuration && cordova build android",
-    "ionic-build:debug": "ng build --eval--source-map --configuration=$npm_config_angular_configuration && cordova build android --debug --buildConfig ./buildConfig/build.json",
+    "ionic-build": "ng build --source-map --plugin ~build-customization-plugin.js && cordova build android",
+    "ionic-build:debug": "ng build --configuration=$npm_config_angular_configuration && cordova build android --debug --buildConfig ./buildConfig/build.json",
     "ionic-build:prod": "ionic cordova build android --configuration=$npm_config_angular_configuration --prod --release --buildConfig ./buildConfig/build.json",
     "ionic-serve": "ionic cordova run android --livereload --configuration=hmr",
     "sonar-scanner": "sonar-scanner",
@@ -22,15 +22,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-builders/custom-webpack": "^8.4.1",
+    "@angular-builders/custom-webpack": "^10.0.1",
     "@angular-builders/dev-server": "^7.3.1",
-    "@angular/animations": "^9.1.13",
-    "@angular/common": "^9.1.13",
-    "@angular/core": "^9.1.13",
-    "@angular/forms": "^9.1.13",
-    "@angular/platform-browser": "^9.1.13",
-    "@angular/platform-browser-dynamic": "^9.1.13",
-    "@angular/router": "^9.1.13",
+    "@angular/animations": "^10.2.5",
+    "@angular/common": "^10.2.5",
+    "@angular/core": "^10.2.5",
+    "@angular/forms": "^10.2.5",
+    "@angular/platform-browser": "^10.2.5",
+    "@angular/platform-browser-dynamic": "^10.2.5",
+    "@angular/router": "^10.2.5",
     "@ionic-native/android-permissions": "^5.30.0",
     "@ionic-native/app-version": "^5.15.1",
     "@ionic-native/camera": "^5.36.0",
@@ -64,7 +64,7 @@
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
     "@project-sunbird/client-services": "5.0.0",
-    "@project-sunbird/common-consumption-v9": "5.0.0",
+    "@project-sunbird/common-consumption-v10": "^4.11.0",
     "@project-sunbird/common-form-elements-v9": "5.0.3",
     "@project-sunbird/content-player": "4.4.0",
     "@project-sunbird/discussions-ui-v8": "2.6.0-beta.2",
@@ -136,6 +136,7 @@
     "ng2-charts": "^2.4.2",
     "ng2-material-dropdown": "0.11.0",
     "ngx-bootstrap": "^5.6.2",
+    "ngx-build-plus": "^10.1.1",
     "ngx-chips": "2.2.2",
     "ngx-infinite-scroll": "^10.0.1",
     "ngx-moment": "^5.0.0",
@@ -164,12 +165,12 @@
     "ionic_enable_lint": false
   },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.901.15",
-    "@angular-devkit/build-angular": "~0.901.15",
-    "@angular/cli": "~9.1.15",
-    "@angular/compiler": "~9.1.13",
-    "@angular/compiler-cli": "~9.1.13",
-    "@angular/language-service": "~9.1.13",
+    "@angular-devkit/architect": "^0.1002.4",
+    "@angular-devkit/build-angular": "^0.1002.4",
+    "@angular/cli": "^10.2.4",
+    "@angular/compiler": "^10.2.5",
+    "@angular/compiler-cli": "^10.2.5",
+    "@angular/language-service": "^10.2.5",
     "@angularclass/hmr": "^2.1.3",
     "@babel/core": "^7.5.5",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
@@ -211,9 +212,9 @@
     "sb-cordova-plugin-utility": "git+https://github.com/Sunbird-Ed/sb-cordova-plugin-utility.git#release-4.1.0",
     "sonarqube-scanner": "^2.5.0",
     "tiny-glob": "^0.2.9",
-    "ts-node": "^8.4.1",
+    "ts-node": "^10.9.1",
     "tslint": "~5.16.0",
-    "typescript": "~3.8.3"
+    "typescript": "^4.0.8"
   },
   "description": "An Ionic project",
   "cordova": {
@@ -271,9 +272,7 @@
       "cordova-plugin-androidx-adapter": {},
       "cordova-plugin-secure-storage-echo": {},
       "cordova-plugin-appavailability": {},
-      "cordova-plugin-camera": {
-        "ANDROIDX_CORE_VERSION": "1.6.+"
-      },
+      "cordova-plugin-camera": {},
       "cordova-plugin-filepath": {},
       "cordova-plugin-chooser": {},
       "cordova-plugin-filepicker": {},
@@ -339,10 +338,10 @@
       "^sunbird-sdk": "<rootDir>/node_modules/@project-sunbird/sunbird-sdk",
       "^sunbird-sdk/(.*)$": "<rootDir>/node_modules/@project-sunbird/sunbird-sdk/$1",
       "@project-sunbird/common-consumption": [
-        "<rootDir>/node_modules/@project-sunbird/common-consumption-v9"
+        "<rootDir>/node_modules/@project-sunbird/common-consumption-v10"
       ],
       "@project-sunbird/common-consumption/*": [
-        "<rootDir>/node_modules/@project-sunbird/common-consumption-v9/*"
+        "<rootDir>/node_modules/@project-sunbird/common-consumption-v10/*"
       ],
       "common-form-elements": [
         "<rootDir>/node_modules/@project-sunbird/common-form-elements-v9"
