--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test:ci": "jest --ci --collectCoverage=true --coverageReporters=lcov --forceExit --detectOpenHandles --maxWorkers=2",
     "ionic-build": "ng build --plugin ~build-customization-plugin.js && cordova build android",
     "ionic-build:debug": "ng build --plugin ~build-customization-plugin.js && cordova build android --debug --buildConfig ./buildConfig/build.json",
-    "ionic-build:prod": "ionic cordova build android --plugin ~build-customization-plugin.js --prod --release --buildConfig ./buildConfig/build.json",
+    "ionic-build:prod": "ionic cordova build android --plugin ~build-customization-plugin.js --configuration production --release --buildConfig ./buildConfig/build.json",
     "ionic-serve": "ionic cordova run android --livereload --configuration=hmr",
     "sonar-scanner": "sonar-scanner",
     "sonar-scanner:scan": "sonar-scanner -Dsonar.host.url=http://127.0.0.1:9000 -Dsonar.login=$SONAR_LOGIN",
@@ -23,13 +23,13 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^11.2.14",
-    "@angular/common": "^11.2.14",
-    "@angular/core": "^11.2.14",
-    "@angular/forms": "^11.2.14",
-    "@angular/platform-browser": "^11.2.14",
-    "@angular/platform-browser-dynamic": "^11.2.14",
-    "@angular/router": "^11.2.14",
+    "@angular/animations": "^12.2.17",
+    "@angular/common": "^12.2.17",
+    "@angular/core": "^12.2.17",
+    "@angular/forms": "^12.2.17",
+    "@angular/platform-browser": "^12.2.17",
+    "@angular/platform-browser-dynamic": "^12.2.17",
+    "@angular/router": "^12.2.17",
     "@ionic-native/android-permissions": "^5.30.0",
     "@ionic-native/app-version": "^5.15.1",
     "@ionic-native/camera": "^5.36.0",
@@ -44,7 +44,7 @@
     "@ionic-native/file-transfer": "^5.36.0",
     "@ionic-native/google-plus": "^5.33.0",
     "@ionic-native/http": "^5.34.0",
-    "@ionic-native/image-picker": "^5.30.0",
+    "@ionic-native/image-picker": "^5.36.0",
     "@ionic-native/ionic-webview": "^5.15.1",
     "@ionic-native/keyboard": "^5.15.1",
     "@ionic-native/local-notifications": "^5.15.1",
@@ -58,23 +58,23 @@
     "@ionic-native/social-sharing": "^5.15.1",
     "@ionic-native/status-bar": "^5.15.1",
     "@ionic-native/streaming-media": "^5.30.0",
-    "@ionic/angular": "5.7.0",
+    "@ionic/angular": "^6.5.2",
     "@ionic/storage": "2.2.0",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
     "@project-sunbird/client-services": "5.0.0",
-    "@project-sunbird/common-consumption": "4.12.0",
+    "@project-sunbird/common-consumption": "4.12.1",
     "@project-sunbird/common-form-elements-v9": "5.0.3",
-    "@project-sunbird/content-player": "^5.1.0",
+    "@project-sunbird/content-player": "5.1.0",
     "@project-sunbird/discussions-ui-v8": "2.6.0-beta.2",
     "@project-sunbird/sb-dashlet": "1.0.4",
-    "@project-sunbird/sb-notification": "5.0.12",
-    "@project-sunbird/sb-styles": "0.0.9",
-    "@project-sunbird/sunbird-epub-player-v9": "5.1.0",
+    "@project-sunbird/sb-notification": "5.0.9",
+    "@project-sunbird/sb-styles": "0.0.16",
+    "@project-sunbird/sunbird-epub-player-v9": "5.2.1",
     "@project-sunbird/sunbird-pdf-player-v9": "5.1.1",
     "@project-sunbird/sunbird-quml-player-v9": "5.1.5",
     "@project-sunbird/sunbird-sdk": "5.0.0",
-    "@project-sunbird/sunbird-video-player-v9": "5.1.0",
+    "@project-sunbird/sunbird-video-player-v9": "5.2.4",
     "chart.js": "^2.9.4",
     "chartjs-plugin-datalabels": "^0.7.0",
     "chartjs-plugin-stacked100": "^0.7.1",
@@ -84,7 +84,7 @@
     "com.telerik.plugins.nativepagetransitions": "^0.7.0",
     "cordova-android": "^10.1.2",
     "cordova-plugin-advanced-http": "^2.5.1",
-    "cordova-plugin-android-permissions": "^1.1.2",
+    "cordova-plugin-android-permissions": "^1.1.5",
     "cordova-plugin-androidx-adapter": "^1.1.3",
     "cordova-plugin-appavailability": "^0.4.2",
     "cordova-plugin-badge": "^0.8.8",
@@ -97,7 +97,7 @@
     "cordova-plugin-file-opener2": "^2.2.1",
     "cordova-plugin-file-transfer": "git+https://github.com/apache/cordova-plugin-file-transfer.git",
     "cordova-plugin-filechooser": "^1.2.0",
-    "cordova-plugin-filepath": "^1.5.8",
+    "cordova-plugin-filepath": "^1.6.0",
     "cordova-plugin-filepicker": "^1.1.6",
     "cordova-plugin-googleplus": "^8.5.2",
     "cordova-plugin-inappbrowser": "^5.0.0",
@@ -111,7 +111,7 @@
     "cordova-plugin-statusbar": "^2.4.3",
     "cordova-plugin-streaming-media": "^2.3.0",
     "cordova-plugin-webview-checker": "^1.0.1",
-    "cordova-plugin-x-socialsharing": "^6.0.3",
+    "cordova-plugin-x-socialsharing": "^6.0.4",
     "cordova-plugin-zip": "^3.1.0",
     "cordova-sqlite-storage": "6.0.0",
     "cordova.plugins.diagnostic": "^5.0.2",
@@ -119,7 +119,7 @@
     "datatables.net-fixedcolumns": "^3.3.3",
     "dayjs": "1.9.8",
     "dom-to-image": "^2.6.0",
-    "epubjs": "0.3.88",
+    "epubjs": "^0.3.93",
     "es6-promise-plugin": "^4.2.2",
     "grapheme-splitter": "^1.0.4",
     "hammerjs": "^2.0.8",
@@ -130,6 +130,7 @@
     "katex": "^0.12.0",
     "lodash-es": "^4.17.20",
     "material-design-icons": "^3.0.1",
+    "mini-css-extract-plugin": "^2.7.2",
     "moment": "^2.29.1",
     "ng-recaptcha": "^5.0.0",
     "ng2-charts": "^2.4.2",
@@ -152,7 +153,7 @@
     "videojs-contrib-quality-levels": "2.1.0",
     "videojs-http-source-selector": "1.1.6",
     "x2js": "^3.3.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.11.4"
   },
   "resolutions": {
     "ng2-material-dropdown": "0.11.0"
@@ -164,12 +165,12 @@
     "ionic_enable_lint": false
   },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.1100.7",
-    "@angular-devkit/build-angular": "^0.1100.7",
-    "@angular/cli": "^11.2.19",
-    "@angular/compiler": "^11.2.14",
-    "@angular/compiler-cli": "^11.0.9",
-    "@angular/language-service": "^11.2.14",
+    "@angular-devkit/architect": "^0.1202.18",
+    "@angular-devkit/build-angular": "^12.2.18",
+    "@angular/cli": "^12.2.18",
+    "@angular/compiler": "^12.2.17",
+    "@angular/compiler-cli": "^12.2.17",
+    "@angular/language-service": "^12.2.17",
     "@angularclass/hmr": "^2.1.3",
     "@babel/core": "^7.5.5",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
@@ -178,15 +179,15 @@
     "@babel/plugin-transform-runtime": "^7.5.5",
     "@babel/preset-env": "^7.9.5",
     "@babel/preset-typescript": "^7.9.0",
-    "@ionic/angular-toolkit": "^3.1.1",
+    "@ionic/angular-toolkit": "^6.1.0",
     "@ionic/v4-migration-tslint": "^1.7.1",
     "@project-sunbird/sb-themes": "0.0.82",
     "@project-sunbird/telemetry-sdk": "0.0.29",
     "@types/jest": "^25.2.1",
-    "@types/node": "^14.0.1",
+    "@types/node": "^14.18.36",
     "babel-jest": "^25.4.0",
     "babel-polyfill": "^6.26.0",
-    "code-push": "^3.0.1",
+    "code-push": "^3.1.5",
     "cordova-plugin-android-downloadmanager": "git+https://github.com/Sunbird-Ed/sb-cordova-plugin-downloadmanager.git",
     "cordova-plugin-app-version": "^0.1.14",
     "cordova-plugin-awesome-shared-preferences": "git+https://github.com/adriano-di-giovanni/cordova-plugin-shared-preferences.git",
@@ -199,7 +200,7 @@
     "cordova-plugin-proguard": "git+https://github.com/greybax/cordova-plugin-proguard.git",
     "cordova-plugin-qr-scanner": "git+https://github.com/project-sunbird/cordova-plugin-qr-scanner.git#release-5.0.2",
     "cordova-plugin-sunbirdsplash": "git+https://github.com/project-sunbird/cordova-plugin-sunbirdsplash.git#release-5.0.2",
-    "cordova-plugin-telerik-imagepicker": "^2.3.3",
+    "cordova-plugin-telerik-imagepicker": "git+https://github.com/Telerik-Verified-Plugins/ImagePicker.git#2.3.4",
     "cordova-zip-plugin": "git+https://github.com/Sunbird-Ed/jjdltc-cordova-plugin-zip.git",
     "fs-extra": "^8.1.0",
     "jest": "^25.4.0",
@@ -212,8 +213,11 @@
     "sonarqube-scanner": "^2.5.0",
     "tiny-glob": "^0.2.9",
     "ts-node": "^10.9.1",
-    "tslint": "~5.16.0",
-    "typescript": "^4.0.8"
+    "tslint": "~6.1.3",
+    "typescript": "^4.2.4"
+  },
+  "browser": {
+    "assert": false
   },
   "description": "An Ionic project",
   "cordova": {
@@ -350,7 +354,9 @@
         "<rootDir>/node_modules/@project-sunbird/common-form-elements-v9/*"
       ]
     },
-    "transformIgnorePatterns": [],
+    "transformIgnorePatterns": [
+      "/node_modules/(?!@ionic/core|@stencil/core|ionicons)"
+    ],
     "coveragePathIgnorePatterns": [
       "<rootDir>/src/app/*/*.module.ts",
       "<rootDir>/src/app/animations/*.ts",
