--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "allowSyntheticDefaultImports": true,
   "compileOnSave": false,
   "angularCompilerOptions": {
-    "enableIvy": false,
+    "enableIvy": true,
     "compilationMode": "partial"
   },
   "compilerOptions": {
@@ -10,13 +10,13 @@
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
     "declaration": false,
-    "module": "es2015",
+    "module": "es2020",
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
     "importHelpers": true,
-    "target": "es5",
+    "target": "es6",
     "skipLibCheck": true,
     "types": [
       "node",
