--- a/package.json
+++ b/package.json
@@ -30,33 +30,33 @@
     "@angular/platform-browser": "^12.2.17",
     "@angular/platform-browser-dynamic": "^12.2.17",
     "@angular/router": "^12.2.17",
-    "@ionic-native/android-permissions": "^5.30.0",
-    "@ionic-native/app-version": "^5.15.1",
+    "@ionic-native/android-permissions": "^5.36.0",
+    "@ionic-native/app-version": "^5.36.0",
     "@ionic-native/camera": "^5.36.0",
     "@ionic-native/chooser": "^5.30.0",
-    "@ionic-native/core": "^5.15.1",
-    "@ionic-native/device": "^5.15.1",
+    "@ionic-native/core": "^5.21.5",
+    "@ionic-native/device": "^5.36.0",
     "@ionic-native/diagnostic": "^5.30.0",
-    "@ionic-native/file": "^5.15.1",
+    "@ionic-native/file": "^5.36.0",
     "@ionic-native/file-chooser": "^5.30.0",
-    "@ionic-native/file-opener": "^5.15.1",
+    "@ionic-native/file-opener": "^5.36.0",
     "@ionic-native/file-path": "^5.30.0",
     "@ionic-native/file-transfer": "^5.36.0",
     "@ionic-native/google-plus": "^5.33.0",
     "@ionic-native/http": "^5.34.0",
     "@ionic-native/image-picker": "^5.36.0",
-    "@ionic-native/ionic-webview": "^5.15.1",
-    "@ionic-native/keyboard": "^5.15.1",
-    "@ionic-native/local-notifications": "^5.15.1",
+    "@ionic-native/ionic-webview": "^5.36.0",
+    "@ionic-native/keyboard": "^5.36.0",
+    "@ionic-native/local-notifications": "^5.36.0",
     "@ionic-native/media": "^5.30.0",
-    "@ionic-native/native-page-transitions": "^5.23.0",
+    "@ionic-native/native-page-transitions": "^5.36.0",
     "@ionic-native/network": "5.31.1",
     "@ionic-native/photo-library": "^5.30.0",
     "@ionic-native/photo-viewer": "^5.30.0",
-    "@ionic-native/screen-orientation": "^5.15.1",
+    "@ionic-native/screen-orientation": "^5.36.0",
     "@ionic-native/sign-in-with-apple": "^5.36.0",
-    "@ionic-native/social-sharing": "^5.15.1",
-    "@ionic-native/status-bar": "^5.15.1",
+    "@ionic-native/social-sharing": "^5.36.0",
+    "@ionic-native/status-bar": "^5.36.0",
     "@ionic-native/streaming-media": "^5.30.0",
     "@ionic/angular": "^6.5.2",
     "@ionic/storage": "2.2.0",
@@ -125,6 +125,7 @@
     "hammerjs": "^2.0.8",
     "ionic-plugin-keyboard": "2.2.1",
     "ionic4-rating": "^1.0.9",
+    "jest-environment-jsdom": "^29.4.3",
     "jspdf": "^2.0.0",
     "jwt-decode": "^2.2.0",
     "katex": "^0.12.0",
@@ -183,9 +184,9 @@
     "@ionic/v4-migration-tslint": "^1.7.1",
     "@project-sunbird/sb-themes": "0.0.82",
     "@project-sunbird/telemetry-sdk": "0.0.29",
-    "@types/jest": "^25.2.1",
+    "@types/jest": "^29.4.0",
     "@types/node": "^14.18.36",
-    "babel-jest": "^25.4.0",
+    "babel-jest": "^29.4.2",
     "babel-polyfill": "^6.26.0",
     "code-push": "^3.1.5",
     "cordova-plugin-android-downloadmanager": "git+https://github.com/Sunbird-Ed/sb-cordova-plugin-downloadmanager.git",
@@ -203,7 +204,7 @@
     "cordova-plugin-telerik-imagepicker": "git+https://github.com/Telerik-Verified-Plugins/ImagePicker.git#2.3.4",
     "cordova-zip-plugin": "git+https://github.com/Sunbird-Ed/jjdltc-cordova-plugin-zip.git",
     "fs-extra": "^8.1.0",
-    "jest": "^25.4.0",
+    "jest": "^29.4.2",
     "plist": "^3.0.2",
     "properties-reader": "^2.2.0",
     "sb-cordova-plugin-customtabs": "git+https://github.com/Sunbird-Ed/sb-cordova-plugin-customtabs.git#release-5.0.2",
@@ -298,6 +299,7 @@
     ]
   },
   "jest": {
+    "testEnvironment": "jsdom",
     "browser": false,
     "globals": {
       "cordova": true
