--- a/package.json
+++ b/package.json
@@ -180,7 +180,7 @@
     "@babel/plugin-transform-runtime": "^7.5.5",
     "@babel/preset-env": "^7.9.5",
     "@babel/preset-typescript": "^7.9.0",
-    "@ionic/angular-toolkit": "^6.1.0",
+    "@ionic/angular-toolkit": "^5.0.3",
     "@ionic/v4-migration-tslint": "^1.7.1",
     "@project-sunbird/sb-themes": "0.0.82",
     "@project-sunbird/telemetry-sdk": "0.0.29",
@@ -188,7 +188,7 @@
     "@types/node": "^14.18.36",
     "babel-jest": "^29.4.2",
     "babel-polyfill": "^6.26.0",
-    "code-push": "^3.1.5",
+    "code-push": "^3.0.1",
     "cordova-plugin-android-downloadmanager": "git+https://github.com/Sunbird-Ed/sb-cordova-plugin-downloadmanager.git",
     "cordova-plugin-app-version": "^0.1.14",
     "cordova-plugin-awesome-shared-preferences": "git+https://github.com/adriano-di-giovanni/cordova-plugin-shared-preferences.git",
@@ -215,7 +215,7 @@
     "tiny-glob": "^0.2.9",
     "ts-node": "^10.9.1",
     "tslint": "~6.1.3",
-    "typescript": "^4.2.4"
+    "typescript": "4.2.4"
   },
   "browser": {
     "assert": false
