Issue #ED-4350 feat: migratiing capacitor 6 and node 18

--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "@awesome-cordova-plugins/camera": "6.3.0",
     "@awesome-cordova-plugins/chooser": "6.3.0",
     "@awesome-cordova-plugins/core": "6.3.0",
-    "@awesome-cordova-plugins/diagnostic": "6.4.0",
+    "@awesome-cordova-plugins/diagnostic": "6.7.0",
     "@awesome-cordova-plugins/fcm": "6.3.0",
     "@awesome-cordova-plugins/file": "6.4.0",
     "@awesome-cordova-plugins/file-transfer": "6.4.0",
@@ -51,25 +51,24 @@
     "@awesome-cordova-plugins/http": "6.3.0",
     "@awesome-cordova-plugins/media": "6.3.0",
     "@awesome-cordova-plugins/streaming-media": "6.3.0",
-    "@capacitor-community/apple-sign-in": "5.0.0",
-    "@capacitor-community/barcode-scanner": "4.0.1",
-    "@capacitor-community/file-opener": "1.0.5",
-    "@capacitor/android": "5.5.1",
-    "@capacitor/app": "5.0.6",
-    "@capacitor/browser": "5.2.0",
-    "@capacitor/camera": "5.0.7",
-    "@capacitor/core": "5.5.1",
-    "@capacitor/device": "5.0.6",
-    "@capacitor/haptics": "5.0.6",
-    "@capacitor/keyboard": "5.0.6",
-    "@capacitor/local-notifications": "5.0.7",
-    "@capacitor/network": "5.0.6",
-    "@capacitor/preferences": "5.0.6",
-    "@capacitor/screen-orientation": "5.0.6",
-    "@capacitor/share": "5.0.6",
-    "@capacitor/splash-screen": "5.0.6",
-    "@capacitor/status-bar": "5.0.6",
-    "@capawesome/capacitor-file-picker": "5.1.1",
+    "@capacitor-community/apple-sign-in": "6.0.0",
+    "@capacitor-community/file-opener": "6.0.0",
+    "@capacitor/android": "^6.0.0",
+    "@capacitor/app": "^6.0.0",
+    "@capacitor/browser": "^6.0.0",
+    "@capacitor/camera": "^6.0.0",
+    "@capacitor/core": "^6.0.0",
+    "@capacitor/device": "^6.0.0",
+    "@capacitor/haptics": "^6.0.0",
+    "@capacitor/keyboard": "^6.0.0",
+    "@capacitor/local-notifications": "^6.0.0",
+    "@capacitor/network": "^6.0.0",
+    "@capacitor/preferences": "^6.0.0",
+    "@capacitor/screen-orientation": "^6.0.0",
+    "@capacitor/share": "^6.0.0",
+    "@capacitor/splash-screen": "^6.0.0",
+    "@capacitor/status-bar": "^6.0.0",
+    "@capawesome/capacitor-file-picker": "6.0.0",
     "@ionic/angular": "6.7.5",
     "@ionic/storage": "4.0.0",
     "@ionic/storage-angular": "4.0.0",
@@ -80,6 +79,7 @@
     "@project-sunbird/common-form-elements": "8.0.4",
     "@project-sunbird/content-player": "5.1.0",
     "@project-sunbird/discussions-ui": "8.0.3",
+    "@project-sunbird/ng2-semantic-ui": "^8.0.4",
     "@project-sunbird/sb-dashlet": "8.0.1",
     "@project-sunbird/sb-notification": "8.0.0",
     "@project-sunbird/sb-styles": "0.0.16",
@@ -167,8 +167,8 @@
     "@babel/plugin-transform-runtime": "^7.24.3",
     "@babel/preset-env": "^7.24.5",
     "@babel/preset-typescript": "^7.24.1",
-    "@capacitor/assets": "3.0.4",
-    "@capacitor/cli": "5.5.1",
+    "@capacitor/assets": "3.0.5",
+    "@capacitor/cli": "^6.0.0",
     "@ionic/angular-toolkit": "9.0.0",
     "@project-sunbird/sb-themes": "0.0.88",
     "@project-sunbird/telemetry-sdk": "0.0.29",
