--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -6,8 +6,8 @@ ext {
 }
 
 android {
-    namespace "org.sunbird"
-    compileSdkVersion rootProject.ext.compileSdkVersion
+    namespace "org.sunbird.app"
+    compileSdk rootProject.ext.compileSdkVersion
     defaultConfig {
         applicationId app_id.replaceAll("\\s","")
         resValue("string", "app_name", "${app_name}")
@@ -16,7 +16,7 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
 		versionCode 1
         ext.buildNumber = System.getenv("TRAVIS_BUILD_NUMBER") ?: "local"
-		versionName "8.0.local"
+		versionName "6.0.local"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         aaptOptions {
             // Files and dirs to omit from the packaged assets dir, modified to accommodate modern web apps.
@@ -29,9 +29,7 @@ android {
     }
     buildTypes {
         release {
-            signingConfig signingConfigs.sign
-            minifyEnabled true
-            shrinkResources true
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
