--- a/angular.json
+++ b/angular.json
@@ -85,6 +85,7 @@
               "node_modules/@project-sunbird/sunbird-quml-player-web-component/styles.css",
               "node_modules/@project-sunbird/sunbird-pdf-player-web-component/styles.css",
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "src/assets/styles/semantic/semantic.min.css",
               {
                 "input": "src/global.scss"
               },
@@ -137,6 +138,21 @@
                   "replace": "configurations/configuration.ts",
                   "with": "configurations/configuration.stag.ts"
                 }
+              ],
+              "optimization": false,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "namedChunks": false,
+              "aot": false,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": false,
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "16mb",
+                  "maximumError": "40mb"
+                }
               ]
             },
             "hmr": {
@@ -167,7 +183,7 @@
               "namedChunks": true
             }
           },
-          "defaultConfiguration": "production"
+          "defaultConfiguration": "staging"
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
@@ -178,7 +194,7 @@
             "production": {
               "browserTarget": "app:build:production"
             },
-            "staging" : {
+            "staging": {
               "browserTarget": "app:build:staging"
             },
             "hmr": {
