--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -44,15 +44,37 @@ jobs:
     - name: Build Ionic assets
       run: ionic build --prod && npx cap sync
 
+    - name: Decode env file
+      id: decode_env
+      uses: timheuer/base64-to-file@v1.2
+      with:
+        fileName: 'environment.prod.ts'
+        fileDir: '/home/runner/work/SunbirdEd-mobile-app/SunbirdEd-mobile-app/src/environments/'
+        encodedString: ${{ secrets.ENV }}
+    
     - name: Copy generated assets from Ionic to Capacitor Android platform
       run: npx cap copy android && npx cap update android
 
-    - name: Execute test cases using JEST
-      working-directory: src/app
-      run: npm run test:ci
+    - name: Decode Keystore
+      id: decode_keystore
+      uses: timheuer/base64-to-file@v1.2
+      with:
+        fileName: 'android_keystore.jks'
+        fileDir: '/home/runner/work/SunbirdEd-mobile-app/SunbirdEd-mobile-app/android/app/keystore/'
+        encodedString: ${{ secrets.KEYSTORE }}
 
-    - name: Install Sonar Scanner
-      run: sudo npm install -g sonarqube-scanner@3.5.0
+    - name: Build bundle
+      run: cd android && ./gradlew app:bundleRelease
+      env:
+        SIGNING_KEY_ALIAS: ${{ secrets.SIGNING_KEY_ALIAS }}
+        SIGNING_KEY_PASSWORD: ${{ secrets.SIGNING_KEY_PASSWORD }}
+        SIGNING_STORE_PASSWORD: ${{ secrets.SIGNING_STORE_PASSWORD }}
 
-    - name: Run Sonar Scanner
-      run: sonar-scanner
+    - name: Build APK
+      run: cd android && ./gradlew assembleDebug
+
+    - name: Upload APK
+      uses: actions/upload-artifact@v3.1.2
+      with:
+        name: app-release
+        path: ${{ github.workspace }}/android/app/build/outputs/
