--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -41,6 +41,15 @@ jobs:
     - name: Make ./gradlew command executable
       run: cd android && chmod +x ./gradlew && cd ..
 
+      - name: Create the JSON file from secret
+      run: |
+        echo "${{ secrets.GOOGLE_SERVICE_CONTENT }}" | base64 --decode > google-service.json
+
+    - name: Use the JSON file
+      run: |
+        cat google-service.json 
+        jq '.' google-service.json
+
     - name: Build Ionic assets
       run: ionic build --prod && npx cap sync
 
@@ -59,7 +68,7 @@ jobs:
       id: decode_keystore
       uses: timheuer/base64-to-file@v1.2
       with:
-        fileName: 'android_keystore.jks'
+        fileName: 'Capacitor.jks'
         fileDir: '/home/runner/work/SunbirdEd-mobile-app/SunbirdEd-mobile-app/android/app/keystore/'
         encodedString: ${{ secrets.KEYSTORE }}
 
