--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -41,9 +41,8 @@ jobs:
     - name: Make ./gradlew command executable
       run: cd android && chmod +x ./gradlew && cd ..
 
-      - name: Create the JSON file from secret
-      run: |
-        echo "${{ secrets.GOOGLE_SERVICE_CONTENT }}" | base64 --decode > google-service.json
+    - name: Create the JSON file from secret
+      run: echo "${{ secrets.GOOGLE_SERVICE_CONTENT }}" | base64 --decode > google-service.json
 
     - name: Use the JSON file
       run: |
