--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -46,7 +46,7 @@ jobs:
       uses: timheuer/base64-to-file@v1.2
       with:
         fileName: 'google-services.json'
-        fileDir: '/home/runner/work/SunbirdEd-mobile-app/SunbirdEd-mobile-app/configurations/'
+        fileDir: 'configurations/'
         encodedString: ${{ secrets.GOOGLE_SERVICE_CONTENT }}
 
     - name: Build Ionic assets
