Issue #ED-0000 feat: update git actions path

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -46,8 +46,11 @@ jobs:
       uses: timheuer/base64-to-file@v1.2
       with:
         fileName: 'google-services.json'
-        fileDir: 'configurations/'
+        fileDir: '/home/runner/work/SunbirdEd-mobile-app/SunbirdEd-mobile-app/configurations/'
         encodedString: ${{ secrets.GOOGLE_SERVICE_CONTENT }}
+
+    - name: Verify google-services.json creation
+      run: ls -la /home/runner/work/SunbirdEd-mobile-app/SunbirdEd-mobile-app/configurations/google-services.json
 
     - name: Build Ionic assets
       run: ionic build --prod && npx cap sync
