--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -50,7 +50,7 @@ jobs:
         encodedString: ${{ secrets.GOOGLE_SERVICE_CONTENT }}
 
     - name: Verify google-services.json creation
-      run: ls -la /home/runner/work/SunbirdEd-mobile-app/SunbirdEd-mobile-app/configurations/google-services.json
+      run: ls -la /home/runner/work/SunbirdEd-mobile-app/SunbirdEd-mobile-app/android
 
     - name: Build Ionic assets
       run: ionic build --prod && npx cap sync
