--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -72,7 +72,7 @@ jobs:
       run: ls /home/runner/work/SunbirdEd-mobile-app/SunbirdEd-mobile-app/android/app
     
     - name: read capacitor jks file 
-      cat /home/runner/work/SunbirdEd-mobile-app/SunbirdEd-mobile-app/android/app/Capacitor.jks
+      run: cat /home/runner/work/SunbirdEd-mobile-app/SunbirdEd-mobile-app/android/app/Capacitor.jks
 
     - name: Decode signing properties
       id: decode_properties
