--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -60,6 +60,12 @@ jobs:
     - name: Build Ionic assets
       run: ionic build --prod && npx cap sync
 
+    - name: read environment.prod.ts file 
+      run: cat /home/runner/work/SunbirdEd-mobile-app/SunbirdEd-mobile-app/src/environments/environment.prod.ts
+
+    - name: read environment.ts file 
+      run: cat /home/runner/work/SunbirdEd-mobile-app/SunbirdEd-mobile-app/src/environments/environment.ts
+
     - name: Decode Keystore
       id: decode_keystore
       uses: timheuer/base64-to-file@v1.2
