--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -86,6 +86,13 @@ jobs:
     - name: Build APK
       run: cd android && ./gradlew assembleDebug
 
+    - uses: FirebaseExtended/action-hosting-deploy@v0
+      with:
+        repoToken: "${{ secrets.GITHUB_TOKEN }}"
+        firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT }}"
+        expires: 30d
+        projectId: your-Firebase-project-ID
+
     - name: Upload APK
       uses: actions/upload-artifact@v3.1.2
       with:
