--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -72,6 +72,7 @@ dependencies {
     implementation project(':capacitor-cordova-android-plugins')
     implementation platform('com.google.firebase:firebase-bom:33.1.0')
     implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.google.firebase:firebase-messaging:23.0.0'
 }
 
 apply from: 'capacitor.build.gradle'
