--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -89,9 +89,8 @@ jobs:
     - uses: FirebaseExtended/action-hosting-deploy@v0
       with:
         repoToken: "${{ secrets.GITHUB_TOKEN }}"
-        firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT }}"
-        expires: 30d
-        projectId: your-Firebase-project-ID
+        firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_SUNBIRD_4C2BA }}"
+        projectId: sunbird-4c2ba
 
     - name: Upload APK
       uses: actions/upload-artifact@v3.1.2
