--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -9,8 +9,7 @@
 
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
-# org.gradle.jvmargs=-Xmx1536m
-org.gradle.jvmargs=-Xms1024m -Xmx4096m
+org.gradle.jvmargs=-Xmx1536m
 
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
@@ -24,6 +23,7 @@ android.useAndroidX=true
 android.enableJetifier=true
 android.defaults.buildfeatures.buildconfig=true
  # App.properties 
- app_name=Sunbird 
- app_id=org.sunbird.app.staging
+app_name=Sunbird 
+app_id=org.sunbird.app.staging
 flavor=staging
+custom_scheme_url=staging.diksha.app
